--- a/assignments.html
+++ b/assignments.html
@@ -27,7 +27,7 @@
             </div>
             <div id="container">
             <div class="about">
-                <h1>Coming Soon!!!!</h1>
+                <a href="phpSurvey.html">PHP Survey</a>
             </div>
         </div>
     </body>
