changed the link in assignments.html

--- a/assignments.html
+++ b/assignments.html
@@ -27,7 +27,7 @@
             </div>
             <div id="container">
             <div class="about">
-                <a href="phpSurvey.html">PHP Survey</a>
+                <a href="phpSurvey.php">PHP Survey</a>
             </div>
         </div>
     </body>
