--- a/assignments.html
+++ b/assignments.html
@@ -28,6 +28,7 @@
             <div id="container">
             <div class="about">
                 <a href="phpSurvey.php">PHP Survey</a>
+				<a href="login.php">Personal Project</a>
             </div>
         </div>
     </body>
